--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+body, .btn {
+    font-family: 'Shadows Into Light Two', cursive;
+    font-size: 18px;
+}
+h1, h2 {
+    text-align: center;
+}
+
+
 #welcome, #instructions, #highscores, #game {
     display: none;
 }
@@ -8,6 +17,7 @@
     color: #FF0000;
     display: block;
 }
+
 #lives .big-heart {
     font-size: 200%;
 }
